fix overlapping

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -23,7 +23,7 @@ header {
     color: #FFFFFF;
     padding: 10px;
     height: 7vh;
-    z-index: 1;
+    z-index: 9999;;
 }
 
 header h1 {
@@ -317,6 +317,7 @@ thead th {
     background-color: #f2f2f2;
     position: sticky;
     top: 0;
+    z-index: 999;
 } 
 
 td a{
